--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-practice",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "es2020",
   "scripts": {
     "start": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "mysql2": "^3.14.1",
     "nodejs-practice": "file:",
     "nodemon": "^3.1.10",
     "pokemon": "^3.3.0"
